--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "license": "ISC",
   "author": "SugarSD",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.index.js"
   }
 }
